--- a/Labo_7/Styles/Style_homepage.css
+++ b/Labo_7/Styles/Style_homepage.css
@@ -15,7 +15,9 @@ header h1 {
     background-color: #4a90e2;
     color: white;
     padding: 20px;
+    border-radius: 10px;
     text-align: center;
+
 }
 
 
