--- a/Labo_9/Styles/Style_airbus.css
+++ b/Labo_9/Styles/Style_airbus.css
@@ -1,6 +1,7 @@
 body{
-    width: 1200px;
+    width:95%;
     margin: 0 auto;
+    font-family: arial, helvetica,sans-serif;
 }
 
 header{
@@ -78,14 +79,10 @@ article{
     background-color: white;
     color: black;
     text-align: left;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-right: 30px;
-    align-items: flex-end;
-
-
-
+    margin: 20px 30px 20px 0;   /* boven, rechts, onder, links */
+    padding: 10px 15px;
 }
+
 article span{
     color: blue;
     font-weight: bold;
@@ -121,14 +118,18 @@ section img{
 
 }
 
+.footer-columns
+{
+    float: left;
+    margin-right: 40px;
+}
+
 footer{
-    clear: both;              /* onder main + aside */
-    background-color: #666666;/* achtergrondkleur */
-    color: white;             /* tekstkleur wit */
-    line-height: 2em;         /* lijnhoogte 2ems */
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 120px;      /* 120px vrije ruimte links */
+    clear: both;
+    background-color: #666666;
+    color: white;
+    line-height: 2em;
+    padding: 10px 0 10px 120px;
 }
 
 /* links in de footer */
