--- a/Labo_9/Styles/Style_airbus.css
+++ b/Labo_9/Styles/Style_airbus.css
@@ -79,7 +79,7 @@ article{
     background-color: white;
     color: black;
     text-align: left;
-    margin: 20px 30px 20px 0;   /* boven, rechts, onder, links */
+    margin: 20px 30px 20px 0;   
     padding: 10px 15px;
 }
 
@@ -139,7 +139,7 @@ footer a{
 }
 
 footer a:hover{
-    color: red;               /* tijdelijk rood bij hover */
+    color: red;
 }
 
 #copyright{
